routing by selectors

--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -14,9 +14,11 @@
 
         <p>Use this site to get your weather!</p>
         <form>
-            <input placeholder="Enter location">
+            <input placeholder="Enter Zip code,City,Country ">
             <button>Search</button>
         </form>
+        <p id="msg1"></p>
+        <p id ="msg2"></p>
     </div>
 
     {{>footer}}
