--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -4,14 +4,14 @@
 
 <head>
     <title>About</title>
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="/img/weather.jpg">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/me.png">
+        <img class="portrait" src="/img/me.jpg">
     </div>
     
     {{>footer}}
