--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by Abdelrahman Khattab. It uses data from mapbox.com and darksky.net !</p>
-        <img class="portrait" src="/img/me.jpg">
+        <img class="portrait" src="/img/m.jpg">
     </div>
     
     {{>footer}}
